prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/interp_str_not_string.diag.txt
ERROR: expected string
testData/diagnostics/interp_str_not_string.nut:3:9

println($'{{{{{{{{')
         ^


